# ifunny_scraper

./: Cargo.toml
src/: main.rs
