[package]
name = "ifunny_scraper"
version = "0.1.0"
authors = ["Haze Booth <isnt@haze.cool>"]
edition = "2018"

[dependencies]
reqwest = "0.10.4" 
scraper = "0.11.0"
image = "0.23.4"
tokio = { version = "0.2.20", features = ["macros"] }
futures = "0.3.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
argh = "0.1.3"
async-std = "1.5.0"
